<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />

<!--        icon change kore nish-->
        <item
            android:id="@+id/nav_theatre"
            android:icon="@drawable/ic_baseline_theaters_24"
            android:title="@string/theatre" />



        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_pin_24"
            android:title="@string/menu_profile" />

    </group>

    <item android:title="More Items">
        <menu>
            <item
                android:id="@+id/nav_movie"
                android:icon="@drawable/ic_baseline_movie_24"
                android:title="Movie Genres" />

            <item
                android:id="@+id/nav_tv"
                android:icon="@drawable/ic_baseline_live_tv_24"
                android:title="Tv Genres" />


        </menu>
    </item>


    <item android:title="User">
        <menu>
            <item
                android:id="@+id/nav_add_movie"
                android:icon="@drawable/ic_baseline_add_24"
                android:title="Add movie" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_baseline_logout_24"
                android:title="@string/log_out" />

        </menu>
    </item>


</menu>