<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.movieapp.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_theatre"
        android:name="com.example.movieapp.ui.TheatreFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_theatre" />

    <fragment
        android:id="@+id/nav_add_movie"
        android:name="com.example.movieapp.ui.MissingMovieFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_missing_moview" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.movieapp.ui.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_movie"
        android:name="com.example.movieapp.ui.MgFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_genre" />

    <fragment
        android:id="@+id/nav_tv"
        android:name="com.example.movieapp.ui.TvFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_tv" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.movieapp.ui.SettingFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_setting" />

</navigation>